--- a/#src/css/_featured.scss
+++ b/#src/css/_featured.scss
@@ -1,83 +1,120 @@
 .featured .container {
-    background-color: $primary-color-400;
+    background: linear-gradient(0deg, $primary-color-800 0%, $primary-color-700 50%, $primary-color-400 100%);
+    background-color: $primary-color-700;
     color: $primary-color-900;
-    padding: 1.5rem 6.25rem;
+    padding: 1.5rem 3.5rem;
+    margin: 4rem auto;
 }
 
 .featured-items {
+    margin-top: 1.5rem;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-flow: column wrap;
+    align-content: space-between;
+    height: 55rem;
 }
 
-.featured-big {
-    flex-basis: 35%;
-    margin-right: 1.5rem;
+.item:nth-of-type(4n+1) { order: 1; }
+.item:nth-of-type(4n+2) { order: 2; }
+.item:nth-of-type(4n+3) { order: 3; }
+.item:nth-of-type(4n)   { order: 4; }
+
+
+.item {
+    background-color: $primary-color-300;
+    border-radius: 1.5rem;
+    margin: 0.5rem;
+    width: 23.5%;
+    padding: 1rem;
+    position: relative;
+    box-sizing: border-box;
 }
 
-.featured-small {
 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 1.5rem;
-    flex-basis: 60%; 
+.item-title {
+    text-align: center;
+    font-size: 1.3rem;
+}
 
-    .card {
-        width: 50%;
-        flex-basis: 47.9%;
+.item-img {
+    
+    text-align: center;
+    margin-bottom: auto;
+    padding: 1.5rem;
+    
+    img {
+        width: 100%;
+        max-height: 10.5rem;
+        display: block;
+        margin: auto;
     }
 }
 
-
-
-.card {
-    background-color: $primary-color-300;
-    border-radius: 20px;
-    padding: 1.5rem;
-}
-
-.card-body img {
-    display: block;
-    max-width: 100%;
-    
-}
-
-.card-title {
-    padding:0 2rem;
-    font-size: 1.4rem;
-    text-align: center;
-}
-
-.price {
-    font-size: 2.2rem;
-    width: 100%;
+.item-info {
+    margin-top: auto;
 }
 
 .add-to-cart {
+text-align: right;
+}
 
-    width: 100%;
-    text-align: right;
+.add-to-cart button {
+    border: 0;
+    outline: 0;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    background-color: $accent-color;
+    border-radius: 0.5rem;
+    color: $primary-color-300;
+}
 
-    .old-price {
+.price {
+    font-size: 1.4rem;
+
+    .price_old {
         display: block;
         position: absolute;
-        font-size: 1.3rem;
         color: gray;
-        text-decoration: line-through;
-        margin: -1rem 0;
-    }    
+        font-size: 1.2rem;
+        text-decoration:line-through;
+    }
 
-    button {
-        padding: 0.3rem 0.8rem;
-        border: 0;
-        font-size: 1.1rem;
-        font-weight: 300;
-        color: $primary-color-300;
-        border-radius: 5px;
-        cursor: pointer;
-        background: $accent-color;
+}
+
+.rating {
+    position: absolute;
+    font-size: 0.8rem;
+    right: 1rem;
+}
+
+.browse-all {
+
+    display: block;
+    width: 100%;
+    margin: 1.5rem auto 0;
+    font-size: 1.25rem;
+    color: $accent-color;
+    text-decoration: none;
+    font-weight: 500;
+    text-align: center;
+
+    &:hover {
+        color: lighten($accent-color, 10%);
+    }
+}
+
+@media (max-width: 320px) {
+    .featured .container {
+        padding: 0;
+        margin: 0;
+    }
+
+    .featured-items {
+        display: block;
+    }
+
+    .item {
+        width: 100%;
     }
 
 }
