--- a/#src/css/_navigation.scss
+++ b/#src/css/_navigation.scss
@@ -9,12 +9,13 @@ header {
     display: flex;
     justify-content: space-between;
     margin: auto;
-    width: 73.125rem;       
-    height: 5.625rem;   
+    width: 73.125rem;
+    height: 5.625rem;
 }
 
 .logo-brand {
     align-self: center;
+
     img {
         width: 100%;
         height: 100%;
@@ -27,6 +28,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+
     li {
         list-style: none;
 
@@ -35,16 +37,17 @@ header {
             text-decoration: none;
             height: 5.625rem;
             line-height: 5.625rem;
-            padding:0 1.5rem;
+            padding: 0 1.5rem;
             display: block;
+
             &:hover {
-                background-color:darken($primary-color-800, 5%);
+                background-color: darken($primary-color-800, 5%);
             }
         }
-    } 
+    }
 }
 
-li:first-of-type:hover, 
+li:first-of-type:hover,
 li:first-of-type:active {
     .dropdown-container {
         display: block;
@@ -55,8 +58,8 @@ li:first-of-type:active {
     position: fixed;
     left: 0;
     right: 0;
-    margin:-2rem auto;
-    display: none; 
+    margin: -2rem auto;
+    display: none;
     padding: 2rem 0 4rem;
     width: 66rem;
 }
@@ -90,10 +93,11 @@ li:first-of-type:active {
             line-height: 1;
             padding: 0.3rem 0;
             display: block;
+
             &:hover {
                 background: none;
             }
-        }        
+        }
 
     }
 }
@@ -139,9 +143,9 @@ li:first-of-type:active {
         position: fixed;
         max-height: calc(90% - 5.625rem);
         overflow-y: scroll;
-        -webkit-overflow-scrolling:touch;
+        -webkit-overflow-scrolling: touch;
         display: flex;
-    }    
+    }
 
     .navigation-hamburger {
         display: flex;
@@ -185,7 +189,7 @@ li:first-of-type:active {
 
 
 @media (max-width: 33.75em) {
-    
+
     .mega-dropdown nav {
         justify-content: space-between;
     }
@@ -236,14 +240,26 @@ li:first-of-type:active {
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+    position: relative;
 
-    span, img {
+    span,
+    img {
         height: 2rem;
     }
 
+    .cart-list {
+        position: absolute;
+        background: linear-gradient(0deg, $primary-color-300 0%, $primary-color-500 100%);
+        background-color: $primary-color-700;
+        width: 15rem;
+        height: 20rem;
+        top: 5.565rem;
+        left: -3.5rem;
+    }
 }
 
-@media (max-width: 64em), (max-width: 80em) {
+@media (max-width: 64em),
+(max-width: 80em) {
 
     .cart {
         position: fixed;
