--- a/#src/css/style.scss
+++ b/#src/css/style.scss
@@ -1,22 +1,23 @@
 $primary-color-300: #ffffff;
 $primary-color-400: #e9e9e9;
+$primary-color-500: #777777;
 $primary-color-700: #444444;
 $primary-color-800: #333333;
 $primary-color-900: #000000;
 
 $accent-color: #EF5DA8;
-$accent-color-200: #FCDDEC; 
+$accent-color-200: #FCDDEC;
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-//* { outline: 1px solid lime; }
+/* * { outline: 1px solid lime; } */ 
 
 html {
-    font-size: 16px;
+    font-size:  100%;
 }
 
 body {
@@ -30,7 +31,7 @@ body {
 
 
 .container {
-    margin:1.5rem auto 0;
+    margin: 1.5rem auto 0;
     width: calc(min(80%, 73.125rem));
     padding: 1.5rem 0;
 }
@@ -48,6 +49,9 @@ h1 {
 @import '_promo.scss';
 @import '_featured.scss';
 @import '_about.scss';
+@import '_subscription.scss';
+@import '_location.scss';
+@import '_footer.scss';
 
 body,
 h1,
@@ -55,6 +59,15 @@ h2,
 h3,
 ul,
 p {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
+@media (max-width: 320px) {
+
+.container {
+    width: calc(min(99%, 73.125rem));
+
+}
+    
+    }
