--- a/#src/css/style.scss
+++ b/#src/css/style.scss
@@ -1,73 +1,171 @@
-$primary-color-300: #ffffff;
-$primary-color-400: #e9e9e9;
-$primary-color-500: #777777;
-$primary-color-700: #444444;
-$primary-color-800: #333333;
-$primary-color-900: #000000;
+$primary-color-100: #fff;
+$primary-color-200: #f9f9f9;
+$primary-color-300: #333333;
+$primary-color-600: #000000;
 
-$accent-color: #EF5DA8;
-$accent-color-200: #FCDDEC;
+$accent-color-100: #FCDDEC;
+$accent-color-200: #EF5DA8;
 
 *,
 *::before,
 *::after {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-/* * { outline: 1px solid lime; } */ 
-
-html {
-    font-size:  100%;
-}
+//* { outline: 2px solid green;}
 
 body {
-    margin: 0;
-    padding: 0;
-    background-color: $primary-color-800;
-    color: #e9e9e9;
-    font-size: 1rem;
+    font-size: 16px;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    color: $primary-color-200;
+    background-color: $primary-color-300;
 }
 
+a {
+    text-decoration: none;
+}
 
 .container {
-    margin: 1.5rem auto 0;
-    width: calc(min(80%, 73.125rem));
-    padding: 1.5rem 0;
+    width: 1170px;
+    margin: auto;
 }
 
-.container:first-of-type {
-    margin-top: 0;
-}
+header {
+    width: 100%;
+    background-color: $primary-color-300;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 
-h1 {
-    font-size: 2.3rem;
-    font-weight: 600;
-}
-
-@import '_navigation.scss';
-@import '_promo.scss';
-@import '_featured.scss';
-@import '_about.scss';
-@import '_subscription.scss';
-@import '_location.scss';
-@import '_footer.scss';
-
-body,
-h1,
-h2,
-h3,
-ul,
-p {
-    margin: 0;
-    padding: 0;
-}
-
-@media (max-width: 320px) {
-
-.container {
-    width: calc(min(99%, 73.125rem));
-
-}
-    
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
+
+}
+
+.logo-brand img {
+    display: block;
+    max-width: 100%;
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+
+    li {
+        line-height: 90px;
+        list-style: none;
+
+        a {
+            padding: 36px 15px;
+            color: $primary-color-200;
+        }
+    }
+
+    li:hover, li:active {
+        background-color: darken($primary-color-300, 5%);
+        transition: 0.2s;
+    }
+
+    .open-dropdown.active {
+        background-color: darken($primary-color-300, 5%);
+    }
+
+}
+
+.dropdown-container.show {
+    display: block;
+}
+
+.dropdown-container {
+    position: fixed;
+    top: 90px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 1000px;
+    display: none;
+    
+    nav {
+        display: flex;
+        justify-content: space-between;
+        padding: 24px;
+        background: linear-gradient(to left,$accent-color-200 0,$accent-color-100 100%);
+        color: $primary-color-600;
+
+        li:first-of-type {
+            font-size: 18px;
+            font-weight: 600;
+            padding-bottom: 10px;
+        }
+
+        li {
+            list-style: none;
+            padding: 5px 0;
+            a {
+                color: $primary-color-600;
+            }
+        }
+    }
+
+}
+
+.hero-area {
+    background: url('/images/hero.jpg') no-repeat center;
+    background-size: cover;
+    width: 100%;
+    padding: 90px 0;
+}
+
+.banner {
+    position: relative;
+    width: 100%;
+    height: 490px;
+    border-radius: 20px;
+    background: rgba(255,255,255,0.5);
+    padding: 96px 32px;
+
+    .hero-text {
+        width: 50%;
+
+        h1 {
+            font-size: 48px;
+            background: $primary-color-300;
+            border-radius: 15px;
+            padding: 10px 48px;
+            width: 17ch;
+
+            span {
+                color: $accent-color-200;
+            }
+
+        }
+
+        h2 {
+            margin-top: 32px;
+            font-size: 36px;
+            text-align: center;
+            font-weight: 500;
+            color: $primary-color-600;
+        }
+
+    }
+
+}
+
+.banner::before {
+    width: 60%;
+    height: 100%;
+    content: '';
+    position: absolute;
+    top: 64px;
+    left: calc(50% + 32px);
+    border-radius: 20px;
+    background: url('/images/banner.svg') no-repeat top center rgba(190,190,190,0.5);
+    background-size: contain;
+}
