--- a/#src/css/style.scss
+++ b/#src/css/style.scss
@@ -231,7 +231,7 @@ header {
 
 .featured-items .container {
     margin: 64px auto ;
-    padding: 32px;
+    padding: 32px 32px;
     background: $primary-color-250;
     color: $primary-color-600;
 }
@@ -240,7 +240,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 1.4fr;
     grid-auto-rows: 1fr;
-    padding: 32px;
+    padding: 32px 0;
     gap: 32px;
 }
 
@@ -264,6 +264,7 @@ header {
     .card-bottom-price__old {
         font-size: 24px;
         font-weight: 300;
+        margin-top: 40px;
     }
 }
 
@@ -278,11 +279,6 @@ header {
     grid-template-columns: repeat(2,1fr);
     grid-auto-rows: 1fr;
     gap: 32px;
-    /* 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap; */
-
 
     .card-title {
         font-size: 18px;
@@ -339,6 +335,7 @@ header {
         color: lighten($primary-color-300,20%);
         text-decoration: line-through;
         position: absolute;
+        margin-top: 32px;
         margin-left: -5px;
     }
 
@@ -476,7 +473,7 @@ header {
     font-weight: 300;
   }
   
-  .sub-box form input[type="text"] {
+  .sub-box form input[type="email"] {
     flex-basis: 80%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -579,14 +576,35 @@ header {
 
 /* ---------------------------------------- */
 
+//BASE
+@media only screen and (max-width: 1200px) {
+    .container {
+        width: 90%;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .container h1 {
+        font-size: 32px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .container h1 {
+        font-size: 24px;
+    }
+
+    .container {
+        width: 95%;
+        margin: auto;
+    }
+}
+
 //NAVIGATION
 
 @media only screen and (max-width: 1200px) {
 
-.container {
-    width: 95%;
-    margin: auto;
-}
 
 .header {
     height: 90px;
@@ -627,8 +645,8 @@ header {
 
 .toggle-navigation {
     align-self: center;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -641,16 +659,6 @@ header {
         height: 5px;
         background-color: $primary-color-100;
         border-radius: 3px;
-    }
-}
-
-.toggle-navigation:target {
-    animation: rotate 300ms linear;
-}
-
-@keyframes rotate {
-    100% {
-        transform: rotate(180deg);
     }
 }
 
@@ -696,6 +704,55 @@ header {
 
 }
 
+
+@media only screen and (max-width: 1024px) {
+    .dropdown {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content:  flex-start;
+
+        ul {
+            flex-basis: 23%;
+            margin-bottom: 16px;
+            margin-right: 16px;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 768px) {
+    .dropdown {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content:  flex-start;
+
+        ul {
+            flex-basis: 30%;
+            margin-bottom: 16px;
+            margin-right: 16px;
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    .header {
+        padding: 0 16px;
+
+        img {
+            width: 180px;
+        }
+
+    }
+
+    .dropdown {
+        flex-direction: column;
+
+        ul {
+            margin-bottom: 16px;
+        }
+    }
+}
 
 //HERO SECTION
 @media only screen and (max-width: 1519px) {
@@ -786,11 +843,6 @@ header {
 
 @media only screen and (max-width: 480px) {
 
-    .container {
-        width: 99%;
-        margin: auto;
-    }
-
     .hero-area {
         padding: 20px 0;
     }
@@ -823,172 +875,225 @@ header {
 
 //FEATURED
 
-@media only screen and (max-width:1199px) {
-    .cards-container {
-        padding: 16px;
-        gap: 16px;
-        grid-template-columns: 1fr 1.5fr;
-    }
-
-    .small-cards, .big-cards {
-        gap: 16px;
-    }
-}
-
-@media only screen and (max-width:1100px) {
-
-    .featured-items .container {
-        margin: 64px auto ;
-        padding: 24px 0;
-        border-radius: 5px;
-    }
-
-    .featured-items .container h1 {
-        padding:24px 0 0 24px;
-    }
-
-    .cards-container {
-        padding: 24px;
-        gap: 24px;
-        grid-template-columns: 1fr;
-        grid-auto-rows: auto;
-        grid-template-areas:
-        'small'
-        'big'
-        ;
-    }
+@media only screen and (max-width: 1199px) {
 
     .big-cards {
-        display: flex;
-        flex-direction: row;
-        gap: 24px;
-        grid-area: big;
-
-        .card {
-            flex-basis: 50%;
-        }
-    
+        font-size: 24px;
     }
 
     .small-cards {
-        gap: 24px;
-        grid-template-columns: repeat(3,1fr);
-
-        .card-bottom-price {
-            font-size: 20px;
-        }
-
-    }
-
-}
-
-@media only screen and (max-width: 920px) {
-
-    .featured-items .container {
-        margin: 64px auto ;
-        padding: 16px;
-        border-radius: 5px;
-    }
-
-    .featured-items .container h1 {
-        padding:24px 0 0 24px;
-    }
-
-    .cards-container {
-        padding: 32px;
-        gap: 32px;
-        grid-template-columns: 1fr;
         grid-auto-rows: auto;
-        grid-template-areas:
-        'small'
-        'big'
-        ;
     }
 
-    .big-cards {
-        display: flex;
-        flex-direction: row;
-        gap: 32px;
-        grid-area: big;
+    .small-cards, .big-cards {
 
         .card {
-            flex-basis: 50%;
-        }
-
-        .add-to-cart-button {
-            font-size: 16px;
-        }
-
-        .card-bottom-price {
-            font-size: 24px;
-
-            .card-bottom-price__old {
-                font-size: 18px;
+    
+            .card-title {
+                height: 40px;
             }
 
-        }
+            .card-bottom {
+                align-items: flex-start;
+                flex-wrap: wrap;
     
+                .card-bottom-price {
+                    text-align: right;
+                    height: auto;
+                    padding : 0;
+                    flex-basis: 100%;
+                    margin-bottom: 8px;
+    
+                    .card-bottom-price__old {
+                        position: static;
+                        margin-left: 0;
+                        flex-basis: 100%;
+                    }
+    
+                }
+    
+                .add-to-cart-button {
+                    flex-basis: 100%;
+                }
+    
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 991px) {
+
+    .featured-items .container {
+        padding: 32px 24px;
+    }
+
+    .cards-container {
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        grid-template-areas: 
+        'small'
+        'big';
+        padding: 24px 0;
+        gap: 24px;
+    }
+
+    .big-cards, .small-cards {
+        gap: 24px;
     }
 
     .small-cards {
-        gap: 32px;
-        grid-template-columns: repeat(2,1fr);
-
-        .card-title {
-            font-size: 24px;
-        }
-
-        .card-body img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-
-        .card-bottom-price {
-            font-size: 24px;
-        }
-
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
-}
-
-@media only screen and (max-width: 767px) {
-
-    .featured-items .container {
-        padding: 24px 0;
+    .big-cards {
+        flex-direction: row;
+        grid-area: big;
     }
 
-    .big-cards, .small-cards, .cards-container {
-        gap: 24px;
-    }
-}
-
-@media only screen and (max-width: 690px) {
-
-    .featured-items .container {
-        padding: 16px;
-    }
-
-    .big-cards, .small-cards, .cards-container {
-        gap: 16px;
-    }
     .small-cards, .big-cards {
-        .card, .card-title, .card-bottom-price {
-            font-size: 16px!important;
-        }
-
-        .card-title {
-            width: 100%;
-            padding: 0;
-            height: auto;
-        }
-
-        .add-to-cart-button {
-            padding: 10px;
+        .card {
+            flex-basis: 50%;
+    
+            .card-title {
+                font-size: 22px;
+                height: 40px;
+                margin-bottom: 8px;
+                padding: 0;
+            }
+    
+    
+            .card-bottom {
+                margin-top: 8px;
+    
+                .card-bottom-price {
+                    .card-bottom-price__old {
+                        font-size: 20px;
+                    }
+    
+                }
+    
+                .add-to-cart-button {
+                    font-size: 16px;
+                }
+    
+            }
         }
     }
+
+}
+
+@media only screen and (max-width:847px) {
+    .small-cards, .big-cards {
+    .card  {
+        .card-title {
+            font-size: 18px;
+        }
+    }
+}
 }
 
 @media only screen and (max-width: 575px) {
+
+    .featured-items .container {
+        padding: 32px 16px;
+    }
+
+    .cards-container {
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        padding: 32px 0;
+        gap: 16px;
+    }
+
+    .big-cards, .small-cards {
+        gap: 16px;
+    }
+
+    .small-cards {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .small-cards, .big-cards {
+        .card {
+            padding: 16px;
+            flex-basis: 50%;
+    
+            .card-title {
+                font-size: 18px;
+            }
+
+    
+            .card-bottom {
+                margin-top: 8px;
+                flex-direction: row;
+                align-items: flex-start;
+                flex-wrap: wrap;
+    
+                .card-bottom-price {
+                    font-size: 20px;
+    
+                    .card-bottom-price__old {
+                        font-size: 17px;
+                    }
+    
+                }
+    
+            }
+        }
+    }
+
+}
+
+@media only screen and (max-width: 480px) {
+    .featured-items .container {
+        padding: 32px 8px;
+    }
+
+    .cards-container {
+        gap: 8px;
+    }
+
+    .big-cards, .small-cards {
+        gap: 8px;
+    }
+
+    .small-cards, .big-cards {
+        .card {
+            padding: 4px;
+            
+            .card-title {
+                font-size: 14px;
+            }
+
+            .card-body img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+    
+            .card-bottom {
+    
+                .card-bottom-price {
+    
+                    .card-bottom-price__old {
+                        font-size: 15px;
+                    }
+    
+                }
+    
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 374px) {
+    .featured-items .container {
+        padding: 32px 32px;
+    }
+
+    .cards-container {
+        gap: 32px;
+    }
+    
     .small-cards {
         grid-template-columns: 1fr;
     }
@@ -996,51 +1101,21 @@ header {
         flex-direction: column;
     }
 
-    .featured-items .container {
-        padding: 24px 0;
-    }
-
-    .big-cards, .small-cards, .cards-container {
-        gap: 24px;
-    }
     .small-cards, .big-cards {
-        .card, .card-title, .card-bottom-price {
-            font-size: 24px!important;
-        }
+        gap: 32px;
 
-        .card-title {
-            width: 100%;
-            padding: 0;
-            height: auto;
-        }
+        .card {
 
-        .add-to-cart-button {
-            padding: 10px;
-        }
-    }
-}
+            padding: 16px;
 
-@media only screen and (max-width: 480px) {
-    .featured-items .container {
-        padding: 24px 0;
-    }
+            .card-title {
+                font-size: 18px;
+            }
 
-    .big-cards, .small-cards, .cards-container {
-        gap: 8px;
-    }
-    .small-cards, .big-cards {
-        .card, .card-title, .card-bottom-price {
-            font-size: 18px!important;
-        }
-
-        .card-title {
-            width: 100%;
-            padding: 0;
-            height: auto;
-        }
-
-        .add-to-cart-button {
-            padding: 10px;
+            .card-body img {
+                max-width: 100%;
+                max-height: 100%;
+            }
         }
     }
 }
@@ -1052,20 +1127,134 @@ header {
     }
 }
 
-//SUBCRIPTION 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 480px) {
+
+    .about-us .why-us-points {
+        margin: 45px 0;
+    }
+
+    .why-us-points ul li {
+        font-size: 20px;
+
+        img {
+            width: 60px;
+            padding-right: 8px;
+        }
+
+    }
+}
+
+
+@media only screen and (max-width: 350px) {
+    .about-us .why-us-points {
+        margin: 25px 0;
+    }
+
+    .why-us-points ul li {
+        font-size: 17px;
+
+        img {
+            width: 55px;
+            padding-right: 8px;
+        }
+
+    }
+}
+
+
+//SUBCRIPTION
+@media only screen and (max-width: 991px) {
     .sub-box {
-        flex-direction: column;
-        
-        form {
-            flex-direction: column;
-            flex-basis: 100%;
+        flex-direction: row;
+        p {
+            font-size: 20px;
         }
     }
 }
 
 @media only screen and (max-width: 767px) {
+    .sub-box {
+        flex-direction: column;
+        height: auto;
+        padding: 32px 0;
+        gap: 0;
+
+        p {
+            margin-bottom: 16px;
+        }
+        
+    form {
+        flex-direction: row;
+        flex-basis: 50%;
+        width: 100%;
+
+        input[type="email"], input[type="submit"] {
+            padding: 8px;
+            margin-bottom: 8px;
+            border-radius: 0;
+        }
+
+    }
+
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .sub-box {
+        p {
+            text-align: center;
+        }
+        
+        form {
+            flex-direction: column;
+            flex-basis: 100%;
+            width: 90%;
+
+            input[type="email"], input[type="submit"] {
+                padding: 8px;
+                margin-bottom: 8px;
+                border-radius: 0;
+            }
+
+        }
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .sub-box {
+        p {
+            font-size: 16px;
+        }
+    }   
+}
+
+@media only screen and (max-width: 767px) {
+    .location-info {
+        padding: 45px 0;
+      }
+}
+
+@media only screen and (max-width: 767px) {
+    .footer {
+        padding: 32px 16px;
+
+        img {
+            width: 180px;
+        }
+    }
     .footer-navigation {
         flex-wrap: wrap;
+        ul {
+            flex-basis: 50%;
+            margin-bottom: 32px;
+        }
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .footer-navigation {
+        ul {
+            flex-basis: 100%;
+        }
     }
 }
